fix profile button spacing

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -18,6 +18,8 @@
     display: flex;
     align-items: center;
     height: 50px;
+    margin-left: 30%;
+    position: relative;
 }
 
 .search-bar{
@@ -27,12 +29,14 @@
     border: 1px solid #a2a2a2;
     width: 200px;
     border-radius: 20px;
+    position: static;
 }
 
 .profile-button-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 8%;
 }
 .profile-button-div {
     display: flex;
@@ -56,13 +60,16 @@
     cursor: pointer;
     justify-content: center;
     align-items: center;
+    
+    
 }
 
 .profile-photo img{
+    display: flex;
     justify-content: center;
     align-items: center;
-    width: 30px;
-    margin-top: 5px;
+    object-fit: cover;
+    width: 30px;   
 }
 
 .profile-button-div:hover {
@@ -94,8 +101,8 @@
     border: 1px solid rgb(238, 238, 238);
     border-radius: 15px;
     padding-top: 15px;
-    top: 58px;
-    right: 0;
+    top: 70px;
+    right: 8%;
     display: flex;
     flex-direction: column;
     align-items: center;
