--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -42,8 +42,8 @@
 }
 
 .profile-picture{
+    margin-top: 15px;
     width: 125px;
-    margin-top: 8px;
     object-fit: cover;
 }
 
@@ -164,6 +164,13 @@ label {
 .learn-more{
     display: flex;
     width: 270px;
-    margin-top: 20px;    
+    margin-top: 20px;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#learn-more{
+   color: black;
+   cursor: pointer;
+   font-style: bold;
+}
